syntax = "proto2";
package com.jonmagic.flink.experiments;
option java_package = "com.jonmagic.flink.experiments";
option java_multiple_files = true;

message SimpleTest {
    optional int64 uid = 1;
    optional string name = 2;
    optional int32 category_type = 3;
    optional bytes content = 4;
    optional double price = 5;
    map<int64, InnerMessageTest> value_map = 6;
    repeated  InnerMessageTest value_arr = 7;
    optional Corpus corpus_int = 8;
    optional Corpus corpus_str = 9;

    message InnerMessageTest{
        optional int64 v1 =1;
        optional int32 v2 =2;
    }

    enum Corpus {
        UNIVERSAL = 0;
        WEB = 1;
        IMAGES = 2;
        LOCAL = 3;
        NEWS = 4;
        PRODUCTS = 5;
        VIDEO = 7;
    }
}
